--- a/src/Components/NewsLetter.css
+++ b/src/Components/NewsLetter.css
@@ -1,151 +1,110 @@
-.boxe {
-  background-color: transparent;
+.news-content-box {
   display: flex;
-  flex-direction: row;
+  width: 88%;
+  margin-bottom: 2rem;
+  margin-top: -2rem;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid black;
+  border-radius: 20px;
+  height: 25rem;
+}
+
+.news-heading {
+  color: var(--black, #202020);
+  margin-left: 2rem;
+  margin-top: 0;
+  font-family: Hanken Grotesk;
+  font-size: 4.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 3.5rem;
+  /* 109.091% */
+}
+
+.image-place-holder {
+  width: 50%;
+  background: #D9D9D9;
+  border-radius: 20px;
+}
+
+.news-text-box {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
   justify-content: center;
-  width: 73.7%;
+  text-align: center;
 }
 
-.boxe .newsletter-wrapper {
-  border: 0px none;
-  height: 100vh;
-  width: 100vh;
-  margin-right: 158vh;
-  margin-bottom: -5rem;
-}
-
-.boxe .newsletter {
-  background-color: #e8e3df;
-  height: 664px;
-  left: 0;
-  top: 0;
-  width: 1920px;
-}
-
-.boxe .text {
-  height: 464px;
-  left: 100px;
-  position: relative;
-  top: 100px;
-  width: 1729px;
-}
-
-.boxe .heading {
-  margin-left: 23rem;
-}
-.text-right-slight {
-  margin-left: 12rem;
-}
-.boxe .text-wrapper {
-  color: #202020;
-  font-family: "Hanken Grotesk-Medium", Helvetica;
-  font-size: 5rem;
-  font-weight: 500;
-}
-
-.boxe .h-1 {
-  color: #202020;
-  font-family: "Hanken Grotesk-Medium", Helvetica;
-  font-size: 6rem;
-  font-weight: 500;
-}
-
-.boxe .vector {
-  height: 69px;
-  left: 1129px;
-  position: absolute;
-  top: 181px;
-  width: 58px;
-}
-
-.boxe .sign-up-for-our {
-  color: #636363;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 16px;
-  font-weight: 400;
-  left: 1245px;
-  letter-spacing: 0;
-  line-height: 26px;
-  position: absolute;
-  top: 282px;
-  width: 482px;
-}
-
-.boxe .email {
-  height: 70px;
-  left: 935px;
-  position: absolute;
-  top: 394px;
-  width: 468px;
-}
-
-.boxe .overlap {
-  border: 1px solid;
-  border-color: #636363;
-  border-radius: 37px;
-  height: 70px;
-  position: relative;
-  width: 466px;
-}
-
-.boxe .button {
-  height: 50px;
-  left: 310px;
-  position: absolute;
-  top: 9px;
-  width: 145px;
-}
-
-.boxe .overlap-group {
-  border-radius: 24px;
-  height: 50px;
-  position: relative;
-  width: 143px;
-}
-
-.boxe .div-su {
-  color: #202020;
-  font-family: "Inter-Medium", Helvetica;
+.news-line1 {
+  color: var(--grey, #636363);
+  margin-left: 5rem;
+  margin-right: 5rem;
+  /* Paragraph - 16pt Inter Regular */
+  font-family: Inter;
   font-size: 1rem;
-  letter-spacing: 0;
-  margin-left: 1.2rem;
-  padding-top: 1rem;
-}
-
-.boxe .rectangle {
-  border: 1px solid;
-  border-color: #202020;
-  border-radius: 24px;
-  height: 50px;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 143px;
-}
-
-.boxe .img {
-  height: 10px;
-  left: 104px;
-  position: absolute;
-  top: 21px;
-  width: 11px;
-}
-
-.boxe .text-wrapper-2 {
-  color: #636363;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 16px;
+  font-style: normal;
   font-weight: 400;
-  left: 23px;
-  letter-spacing: 0;
-  line-height: normal;
-  opacity: 0.6;
-  position: absolute;
-  top: 25px;
-  white-space: nowrap;
+  line-height: 1rem;
+  /* 162.5% */
 }
-@media screen and (max-width: 1280px) {
-  .boxe {
-    display: none;
+
+.text-subhead {
+  color: var(--black, #202020);
+  margin-top: .3rem;
+  /* H5 - Header 5 - 40pt Inter Semi Bold */
+  font-family: Inter;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 2rem;
+  /* 125% */
+}
+
+.insta-handle {
+  width: 33%;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 2.3125rem;
+  border: 1px solid var(--grey, #636363);
+  background: rgba(255, 255, 255, 0.00);
+}
+
+.insta-page {
+  font-family: Inter;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.insta-id {
+  color: var(--black, #202020);
+  text-decoration: none;
+}
+
+@media screen and (max-width: 860px) {
+  .news-content-box {
+    flex-direction: column;
+    height: 30rem;
+  }
+
+  .image-place-holder {
+    margin-top: 4rem;
+    margin-left: auto;
+    margin-right: auto;
+    height: 40%;
+  }
+
+  .insta-handle {
+    margin-bottom: 2rem;
+  }
+
+  .news-heading {
+    font-size: 3rem;
+    margin-bottom: 5rem;
+    line-height: 3rem;
+
   }
 }
