--- a/src/Components/ServicesProcess.css
+++ b/src/Components/ServicesProcess.css
@@ -76,6 +76,7 @@
 
 .process-block-2 {
     display: flex;
+    margin-top: 2.3rem;
     flex-direction: row;
     justify-content: center;
     text-align: center;
