--- a/src/Components/Clients.css
+++ b/src/Components/Clients.css
@@ -37,6 +37,7 @@
   width: 8.6875rem;
   height: 8.6875rem;
   margin-top: 3rem;
+  border-radius: 10px;
   flex-shrink: 0;
 }
 .client-text-heading {
@@ -46,6 +47,10 @@
   font-style: normal;
   font-weight: 500;
   line-height: 3.125rem;
+}
+.toes {
+  display: block;
+  font-size: 2rem;
 }
 .client-text-subheading {
   color: var(--grey, #636363);
@@ -65,6 +70,8 @@
 }
 .carousel-navigation button {
   font-size: 2rem;
+  border: solid 1px #202020;
+  border-radius: 10px;
 }
 .carousel-navigation {
   margin-top: 3rem;
