--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -60,7 +60,9 @@
     background-color: #333;
     transition: background-color 0.3s ease-in-out;
   }
-
+  .navbar-tem {
+    padding-top: 5rem;
+  }
   .menu-icon.open span:first-child {
     transform: translateY(8px) rotate(45deg);
   }
@@ -72,7 +74,6 @@
   .menu-icon.open span:last-child {
     transform: translateY(-8px) rotate(-45deg);
   }
-
   .navbar-headings.visible {
     display: flex;
     justify-content: center;
@@ -83,7 +84,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 1);
     z-index: 100;
     padding: 2rem;
   }
