--- a/src/Components/AboutOurTeam.css
+++ b/src/Components/AboutOurTeam.css
@@ -35,6 +35,10 @@
 }
 
 @media screen and (max-width: 840px) {
+    .About-team-box {
+        overflow-x: hidden;
+    }
+
     .about-team-head {
         font-size: 4rem;
         line-height: 4rem;
@@ -42,6 +46,10 @@
 }
 
 @media screen and (max-width: 490px) {
+    .About-team-box {
+        overflow-x: hidden;
+    }
+
     .about-team-head {
         font-size: 3rem;
         line-height: 3rem;
