--- a/src/Components/NewsLetter.css
+++ b/src/Components/NewsLetter.css
@@ -13,7 +13,7 @@
 .news-heading {
   color: var(--black, #202020);
   margin-left: 2rem;
-  margin-top: 0;
+  margin-top: 7rem;
   font-family: Hanken Grotesk;
   font-size: 4.875rem;
   font-style: normal;
@@ -92,6 +92,10 @@
     border-radius: 10px;
     height: 30rem;
     background: #D9D9D9;
+  }
+
+  .newsletter-content-box {
+    overflow-x: hidden;
   }
 
   .news-text-box {
