--- a/src/Components/OurServices.css
+++ b/src/Components/OurServices.css
@@ -1,6 +1,7 @@
 .our-services-section {
   margin-bottom: 10rem;
 }
+
 .horizontal-ruler-2 {
   margin-top: 5rem;
   margin-bottom: 5rem;
@@ -10,6 +11,7 @@
   height: 0.0625rem;
   background: #636363;
 }
+
 .services-text {
   margin-top: 10rem;
   color: var(--black, #202020);
@@ -21,6 +23,7 @@
   line-height: 5rem;
   margin-bottom: 15rem;
 }
+
 .service-type {
   margin-left: 5rem;
   margin-top: -2rem;
@@ -31,11 +34,17 @@
   font-style: normal;
   font-weight: 500;
 }
+
 @media screen and (max-width: 900px) {
+  .news-letter-content-box {
+    overflow-x: hidden;
+  }
+
   .service-type {
     text-align: center;
     margin-left: 0;
   }
+
   .horizontal-ruler-2 {
     margin-top: 5rem;
     margin-bottom: 5rem;
@@ -45,6 +54,7 @@
     height: 0.0625rem;
     background: #636363;
   }
+
   .services-text {
     margin-top: 10rem;
     color: var(--black, #202020);
