--- a/src/Components/WhyChooseUs.css
+++ b/src/Components/WhyChooseUs.css
@@ -75,6 +75,7 @@
 @media screen and (max-width: 1020px) {
     .Why-choose-us {
         display: block;
+        overflow-x: hidden;
     }
 
     .why-choose-us-up-line {
