--- a/src/Components/AboutHeading.css
+++ b/src/Components/AboutHeading.css
@@ -4,7 +4,6 @@
     justify-content: center;
     text-align: center;
     margin-top: 4.5rem;
-    height: 100vh;
     margin-bottom: 4rem;
 }
 
@@ -58,10 +57,16 @@
     margin-top: -.5rem;
     margin: 0 auto;
     padding-top: 0;
-    background: #d9d9d9;
     width: 80%;
-    height: 100%;
+    height: 50rem;
     flex: 5;
+    border-radius: 20px;
+}
+
+.About-image-placeholder img {
+    width: 100%;
+    height: 50rem;
+    object-fit: cover;
     border-radius: 20px;
 }
 
