--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -106,6 +106,11 @@
   font-style: normal;
   font-weight: 400;
   line-height: 1.875rem;
+  text-decoration: none;
+}
+
+.link {
+  text-decoration: none;
 }
 
 @media screen and (max-width: 1200px) {
