--- a/src/Components/Values.css
+++ b/src/Components/Values.css
@@ -23,6 +23,13 @@
   flex: 3;
 }
 
+.value-image-box img {
+  border-radius: 10px;
+  width: 100%;
+  object-fit: cover;
+  filter: grayscale(20%);
+}
+
 .value-text-image-arrow {
   margin-left: 3rem;
   flex: 1;
