--- a/src/Components/ServicesProcess.css
+++ b/src/Components/ServicesProcess.css
@@ -38,7 +38,10 @@
     max-height: fit-content;
     border-radius: 20px;
     background: #D9D9D9;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
+
+
 
 .process-no {
     color: var(--beige, #E8E3DF);
