--- a/src/Components/NewsLetter.css
+++ b/src/Components/NewsLetter.css
@@ -9,9 +9,11 @@
   border-radius: 20px;
   height: 25rem;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-  transition: ease-in-out transform .5s;
+  transition: ease-in-out transform 0.5s;
 }
-
+.insta-box-nl {
+  text-decoration: none;
+}
 .news-content-box:hover {
   transform: scale(1.02);
 }
@@ -64,7 +66,7 @@
 
 .text-subhead {
   color: var(--black, #202020);
-  margin-top: .3rem;
+  margin-top: 0.3rem;
   /* H5 - Header 5 - 40pt Inter Semi Bold */
   font-family: Inter;
   font-size: 1.5rem;
@@ -81,12 +83,12 @@
   margin-right: auto;
   border-radius: 2.3125rem;
   border: 1px solid var(--grey, #636363);
-  background: rgba(255, 255, 255, 0.00);
+  background: rgba(255, 255, 255, 0);
 }
 
 .insta-handle:hover {
-  color: rgba(255, 255, 255, 0.00);
-  background: #D9D9D9;
+  color: rgba(255, 255, 255, 0);
+  background: #d9d9d9;
 }
 
 .insta-page {
@@ -109,7 +111,7 @@
     text-align: center;
     border-radius: 10px;
     height: 30rem;
-    background: #D9D9D9;
+    background: #d9d9d9;
   }
 
   .newsletter-content-box {
@@ -126,8 +128,8 @@
   }
 
   .text-subhead {
-    padding-left: .5rem;
-    padding-right: .5rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
 
   .image-place-holder {
