--- a/src/Components/ServicesHead.css
+++ b/src/Components/ServicesHead.css
@@ -49,6 +49,7 @@
 
 .services-main-box {
     margin-bottom: 5rem;
+    background-image: url("../assets/gradient.jpg");
 }
 
 .services-box-elements {
