--- a/src/Components/AboutHeading.css
+++ b/src/Components/AboutHeading.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    margin-top: 4.5rem;
+    margin-top: 0rem;
     margin-bottom: 4rem;
 }
 
@@ -65,6 +65,7 @@
 }
 
 .About-image-placeholder img {
+    filter: grayscale(100%);
     width: 100%;
     height: 50rem;
     object-fit: cover;
