--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -4,12 +4,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #d9d9d9;
+  background-color: transparent;
   padding: 10px;
 }
 
 .navbar-logo img {
   filter: grayscale(100%);
+  margin-left: 1.2rem;
+  fill: black;
   height: 50px;
 }
 
