--- a/src/Components/Values.css
+++ b/src/Components/Values.css
@@ -19,13 +19,13 @@
   width: 84.0625rem;
   height: 43.125rem;
   flex-shrink: 0;
-  background: #d9d9d9;
   flex: 3;
 }
 
 .value-image-box img {
   border-radius: 10px;
   width: 100%;
+  height: 100%;
   object-fit: cover;
   filter: grayscale(20%);
 }
