--- a/src/Components/ContactForm.css
+++ b/src/Components/ContactForm.css
@@ -10,7 +10,7 @@
 
 .photo-for-contact {
   height: 44rem;
-  margin-left: -.7rem;
+  margin-left: -0.7rem;
   margin-right: 0;
   margin-top: 2rem;
   border-radius: 20px;
@@ -29,6 +29,8 @@
 
 .contact-map {
   display: flex;
+  background-color: #bbbaba;
+  border-radius: 0 0 40px 40px;
 }
 
 .contact-us-contact-info {
@@ -48,15 +50,17 @@
   margin: 50px 0;
   margin-top: 0;
   padding: 5rem;
+  background-image: url("../assets/4907157.jpg");
 }
 
-.contact-form>* {
+.contact-form > * {
   width: 50%;
 }
 
 .first-container {
   background: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-    url("https://colorlib.com/etc/cf/ContactFrom_v17/images/bg-01.jpg") center center / cover no-repeat;
+    url("https://colorlib.com/etc/cf/ContactFrom_v17/images/bg-01.jpg") center
+      center / cover no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -231,8 +235,6 @@ iframe {
     margin-bottom: 3rem;
   }
 
-
-
   .second-container form button {
     width: 20rem;
     height: 50px;
@@ -321,7 +323,6 @@ iframe {
     text-align: center;
     width: 100%;
   }
-
 
   .first-container {
     padding: 40px 0;
