--- a/src/Components/Stats.css
+++ b/src/Components/Stats.css
@@ -26,8 +26,9 @@
 }
 
 .stats-main-section {
-  margin-top: 10rem;
-  margin-bottom: 10rem;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+  background-image: url("../assets/4907157.jpg");
 }
 
 @media screen and (max-width: 900px) {
