--- a/src/Components/Clients.css
+++ b/src/Components/Clients.css
@@ -88,7 +88,7 @@
 
 .carousel-navigation button {
   font-size: 2rem;
-  background: #D9D9D9;
+  background: #d9d9d9;
   width: 10rem;
   border: solid 1px #202020;
   border-radius: 10px;
@@ -99,7 +99,8 @@
   display: flex;
   justify-content: space-between;
 }
-
+.prev-bt {
+}
 @media screen and (max-width: 900px) {
   .client-text-box-photo {
     display: none;
