--- a/src/Components/ContactForm.css
+++ b/src/Components/ContactForm.css
@@ -53,14 +53,13 @@
   background-image: url("../assets/4907157.jpg");
 }
 
-.contact-form > * {
+.contact-form>* {
   width: 50%;
 }
 
 .first-container {
   background: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-    url("https://colorlib.com/etc/cf/ContactFrom_v17/images/bg-01.jpg") center
-      center / cover no-repeat;
+    url("https://colorlib.com/etc/cf/ContactFrom_v17/images/bg-01.jpg") center center / cover no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -110,10 +109,14 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  width: 36rem;
+  margin-right: 0;
+  margin-left: 3rem;
 }
 
 .second-container form .form-group {
   margin-bottom: 10px;
+  padding-top: 20px;
 }
 
 .second-container form .form-group * {
@@ -215,7 +218,20 @@ iframe {
   background: #333;
 }
 
-@media screen and (max-width: 1180px) {
+.submit-box-contact {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-left: -6rem;
+  margin-bottom: 1.8rem;
+}
+
+@media screen and (max-width: 1190px) {
+  .contact-box-main {
+    overflow-x: hidden;
+    width: 100%;
+  }
+
   .photo-for-contact {
     background-color: black;
     height: 30rem;
@@ -345,6 +361,7 @@ iframe {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
